# pointer-generator

./: .env  .env_tmpl  .gitignore  Makefile  batcher.py  data.py  pyproject.toml  setup.cfg  x.py
src/: config.py  iter.py  setup.py  tokenizer.py  train_tokenizer.py
src/abisee/: attention_decoder.py  batcher.py  beam_search.py  data.py  decode.py  inspect_checkpoint.py  model.py  run_summarization.py  test.py  util.py
src/summarization/: config.py  model.py  train_base_tokenizer.py  train_tokenizer.py
src/summarization/datamodule/: config.py  datamodule.py  dataset.py  t5.py  t5_trial.py  tokenizer.py
src/summarization/entrypoints/: config.yaml  train_model.py  train_tokenizer.py
src/summarization/model/: model.py
src/summarization/trained_tokenizer/: tokenizer_config.json
src/summarizationmodel/: cli.py  config.py  config.yaml  main.py  model.py  model_tokenizers.py  tf.py  tokenizer.py  train_tokenizer.py  utils.py
src/summarizationmodel/datamodule/: config.py  datamodule.py  t5.py  t5_trial.py  tokenizer.py
src/summarizationmodel/entrypoints/: config.yaml  train_model.py
src/summarizationmodel/model/: model.py
src/trained_tokenizer/: tokenizer.json  tokenizer_config.json
